--- a/wdn/templates_3.0/css/variations/fixed.css
+++ b/wdn/templates_3.0/css/variations/fixed.css
@@ -1,5 +1,5 @@
 @CHARSET "UTF-8";
 body.fixed #wdn_wrapper {
-	max-width:980px;
+	max-width:960px;
 	margin:0 auto;
 }
